syntax = "proto3";

package todolist.v1;

option go_package = "github.com/jjeejj/todolist/backend/proto/todolist/v1;todolistv1";

// 任务对象
message Task {
  string id = 1;
  string text = 2;
  int64 created_at = 3;
  bool completed = 4;
}

// 添加任务请求
message AddTaskRequest {
  string text = 1;
}

// 添加任务响应
message AddTaskResponse {
  Task task = 1;
  bool success = 2;
}

// 获取任务列表请求
message GetTasksRequest {}

// 获取任务列表响应
message GetTasksResponse {
  repeated Task tasks = 1;
}

// 删除任务请求
message DeleteTaskRequest {
  string id = 1;
}

// 删除任务响应
message DeleteTaskResponse {
  bool success = 1;
}

// 更新任务状态请求
message UpdateTaskRequest {
  string id = 1;
  bool completed = 2;
}

// 更新任务状态响应
message UpdateTaskResponse {
  Task task = 1;
  bool success = 2;
}

// 待办事项服务
service TodoService {
  rpc AddTask(AddTaskRequest) returns (AddTaskResponse);
  rpc GetTasks(GetTasksRequest) returns (GetTasksResponse);
  rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse);
  rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse);
}